tests/invalid/missing_semicolon.ar
fn main() {
    const i = 0
}

//! 3:1: error: expected `;`, got `}`
